<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.flossware</groupId>
  <artifactId>flossware-agent</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>FlossWare Agent</name>
  <description>Reusable, infrastructure-neutral agent domain model and public contracts.</description>
  <url>https://github.com/FlossWare/flossware-agent</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <junit.version>5.11.4</junit.version>
    <message>Automated Version Bump ${project.version} [ci skip]</message>
  </properties>

  <scm>
    <connection>scm:git:https://github.com/FlossWare/flossware-agent.git</connection>
    <developerConnection>scm:git:https://github.com/FlossWare/flossware-agent.git</developerConnection>
    <url>https://github.com/FlossWare/flossware-agent</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>packagecloud-flossware</id>
      <name>packagecloud-flossware</name>
      <url>https://packagecloud.io/flossware/java/maven2/</url>
    </repository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
      </plugin>

      <!-- Canonical FlossWare release rules from build-tools (X.Y only, no SNAPSHOT) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>enforce-release-rules</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireReleaseDeps/>
                <requireReleaseVersion/>
                <evaluateBeanshell>
                  <condition>
                    String v = "${project.version}";
                    v.matches("^\\d+\\.\\d+$")
                  </condition>
                  <message>VERSION ERROR: Version must be X.Y format and NOT a SNAPSHOT.</message>
                </evaluateBeanshell>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.5.0</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.16.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-plugin</artifactId>
        <version>2.0.1</version>
        <configuration>
          <providerImplementations>
            <git>git</git>
          </providerImplementations>
          <tag>${project.version}</tag>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
